--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-body {
-  min-height: 75rem; /* Can be removed; just added for demo purposes */
-}
-
-.navbar {
-  margin-bottom: 0;
-}
-
 .navbar-collapse .container-fluid {
   padding: 2rem 2.5rem;
   border-bottom: 1px solid #55595c;
@@ -25,23 +17,15 @@ body {
   margin-right: 3rem;
 }
 
-.social a {
-  font-weight: 500;
-  color: #eceeef;
-}
-.social a:hover {
-  color: #fff;
-}
 
 .jumbotron {
   padding-top: 6rem;
   padding-bottom: 6rem;
   margin-bottom: 0;
   background-color: #fff;
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
+  background: url(img/banjo.jpg) no-repeat;
+  background-position:center;
+  background-size: cover;
 }
 
 .jumbotron-heading {
@@ -50,10 +34,18 @@ body {
 
 .jumbotron .container {
   max-width: 40rem;
+  background: rgb(225,225,225,0.2);
+  padding: 2rem;
+  color: white;
+}
+.jumbotron p{
+color:#fff;
+text-shadow: 0 0 10px rgb(0,0,0.5);
+
 }
 
+
 .album {
-  min-height: 50rem; /* Can be removed; just added for demo purposes */
   padding-top: 3rem;
   padding-bottom: 3rem;
   background-color: #f7f7f7;
@@ -69,6 +61,7 @@ body {
 
 .card > img {
   margin-bottom: .75rem;
+    max-width: 100%;
 }
 
 .card-text {
@@ -83,3 +76,4 @@ footer {
 footer p {
   margin-bottom: .25rem;
 }
+
